Getting Theme Parser going

--- a/ux.test/ux.test.csproj
+++ b/ux.test/ux.test.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>paradoxlost.ux.test.Program</StartupObject>
+    <StartupObject>Paradoxlost.UX.test.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
