--- a/ux.winforms/ux.winforms.csproj
+++ b/ux.winforms/ux.winforms.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Api\WindowMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Theme\ThemeManager.cs" />
+    <Compile Include="Theme\ThemeMessageFilter.cs" />
     <Compile Include="Theme\ThemeParser.cs" />
     <Compile Include="Theme\ThemeStyle.cs" />
     <Compile Include="Util\StringTokenizeExtension.cs" />
@@ -63,6 +64,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Theme\Render\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
