--- a/ux.winforms/ux.winforms.csproj
+++ b/ux.winforms/ux.winforms.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Theme\ThemeManager.cs" />
     <Compile Include="Theme\ThemeMessageFilter.cs" />
     <Compile Include="Theme\ThemeParser.cs" />
+    <Compile Include="Theme\ThemeParserContext.cs" />
     <Compile Include="Theme\ThemeStyle.cs" />
     <Compile Include="Util\StringTokenizeExtension.cs" />
   </ItemGroup>
