--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-hacker
+theme: jekyll-theme-midnight
 title: WinForms Theme Engine
 description: Simple theme engine for windows forms applications
